[metadata]
name = mizviz
version = 0.0.4
author = Rubal Singh
author_email = rubalsxngh@gmail.com
description = VizMiz is a Python library for visualizing missing data in pandas DataFrames.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rubalsxngh/vizmiz-missing-value-visualizer
project_urls =
    Bug Tracker = https://github.com/rubalsxngh/vizmiz-missing-value-visualizer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
